se realizan funciones con js

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="javascript" href="main.js">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1 class="verde">Manipulacion del DOM</h1>
+
+    <form id="formulario">
+      <input type="text" id="calculo1" placeholder="Primer numero" />
+      <br />
+      <input type="text" id="calculo2" placeholder="Segundo numero" />
+      <br />
+      <button id="btnCalculo">Calcular</button>
+      <p id="result"></p>
+    </form>
+
+    <script src="main.js"></script>
+  </body>
 </html>
